snapshots/astarte_message_hub__config__file__test__1.snap
---
source: src/config/file/mod.rs
expression: config
---
realm = '1'
device_id = '2'
pairing_url = 'http://api.astarte.localhost/pairing'
credentials_secret = '4'
pairing_token = '5'
astarte_ignore_ssl = true
grpc_socket_port = 6

[astarte]
ignore_ssl = true
