snapshots/astarte_message_hub__config__file__test__ser_and_de_config-3.snap
---
source: src/config/file/mod.rs
expression: config
---
realm = '1'
device_id = '2'
pairing_url = '3'
credentials_secret = '4'
pairing_token = '5'
astarte_ignore_ssl = true
grpc_socket_port = 6

[astarte]
ignore_ssl = true
